#536: Resolve Sonar findings of June 2026 up to ExporterFactory.java